--- a/.gitignore
+++ b/.gitignore
@@ -109,8 +109,4 @@ dist
 # CSS Compiler
 sass*
 
-# ignore all files
-**/*.*
-
-# except json files in test1 folder
-!test1/**/*.json
+test1/!*.json
